Alignment Issues Fixed

--- a/style.css
+++ b/style.css
@@ -440,6 +440,7 @@ hr {
     display: flex;
   }
   .content {
+    max-width: 1350px;
     display: grid;
     align-items: center;
     justify-content: center;
@@ -450,6 +451,7 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* max-width: ; */
   }
   .content .heading-normal {
     font-size: var(--text-xl);
@@ -478,6 +480,11 @@ hr {
   }
   .top {
     padding: 32px 32px 0 32px;
+  }
+  .metrics .top-text {
+    max-width: 1260px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .top-text.heading-normal {
     font-size: 36px;
